# REve

./: CMakeLists.txt  CRV_COORDINATE_ANALYSIS.md  README.md  mu2e_extracted.gdml
CustomGUIv2/controller/: MyNewMain.controller.js
CustomGUIv2/view/: MyMain.view.xml
CustomGUIv3/: Component.js  eventDisplay.html  manifest.json
config/: EventDisplay.sh  EventDisplay_multi.sh  drawutils.txt  gdml_hierarchy.py  guiutils_current.txt  makerootrc.sh  rundisplay.py  start_RemoteDisplay.sh
documentation/: DataProductVisualization.md  EventNavigation.md  FclOptions.md  GUIOptions.md  GettingStarted.md  examples.md
examples/: calibcalo_MDC2020.fcl  extracted_MDC2020.fcl  extracted_MDC2025.fcl  extracted_example.fcl  helix_example.fcl  nominal_MDC2020.fcl  nominal_MDC2020_withBkgClusters.fcl  nominal_MDC2025.fcl  nominal_Run1a.fcl  nominal_Run2.fcl  nominal_example.fcl  offspill_example.fcl  reflection_example.fcl  select_event_extracted_example.fcl
fcl/: extracted.fcl  nominal.fcl  prolog.fcl
inc/: CollectionFiller.hh  DataCollections.hh  DataInterface.hh  DataProduct.hh  DisplayStatus.hh  EventDisplayManager.hh  GUI.hh  GeomUtil.hh  MCInterface.hh  MainWindow.hh  PrintInfo.hh  REveMainWindow.hh  REveMu2eDataInterface.hh  REveMu2eMCInterface.hh  REveMu2eMainWindow.hh  TextSelect.hh  TrackerCalo2DViews.hh
src/: CMakeLists.txt  CollectionFiller.cc  DataInterface.cc  EventDisplayManager.cc  GUI.cc  GeomUtil.cc  MCInterface.cc  MainWindow.cc  Mu2eEventDisplay_module.cc  PrintInfo.cc  REveEventDisplay_module.cc  REveMainWindow.cc  REveMu2eDataInterface.cc  REveMu2eMCInterface.cc  REveMu2eMainWindow.cc  SConscript  TextSelect.cc  TrackerCalo2DViews.cc  classes.h  classes_def.xml
tutorial/: UsingMu2eEventDisplay.md
(+3 files in other folders)
